
	* skk-abbrev.el: Remove unnecessary spaces between parens.

	* experimental/rdbms/skk-rdbms.el: Require skk-macs instead of
	skk-forword.
	Remove unnecessary spaces between parens.
	
	* tut-code/skk-tutcode.el (skk-tutcode-display-code-1): Declare
	with defun using `static-cond' instead of `skk-defun-cond'.
	Recognize jisx0213 charset characters.
	
	* skk-kcode.el (skk-display-code): Recognize jisx0213 charset
	characters.

	* skk.el (skk-make-indicator-alist): Bug fixed.

	* skk-e18.el: Require pces.el.
	(skk-latin-mode-map): Declare as a constant for dummy purpose.
	(skk-j-mode-map): Ditto.
	(skk-jisx0208-latin-mode-map): Ditto.
	(skk-abbrev-mode-map): Ditto.
	(insert-file-contents-as-coding-system): Declare with
	`defun-maybe' instead of `defun' (APEL 10.2 has it already).
	(auto-fill-function): Declare with `defvar-maybe' instead of
	`defvar' (APEL 10.2 has it already).

	* skk.el (skk-e18-self-insert-keys): Move to skk-e18.el
	(skk-current-local-map): Ditto.
	(skk-e18-setup): Ditto.
	
	* skk-xemacs.el (skk-xemacs-prepare-modeline-properties): Bug
	fixed.
	Set `skk-xemacs-modeline-map' value in this function.
	(skk-xemacs-hiragana-extent): Removed.
	(skk-xemacs-katakana-extent): Ditto.
	(skk-xemacs-jisx0208-latin-extent): Ditto.
	(skk-xemacs-latin-extent): Ditto.
	(skk-xemacs-jisx0201-extent): Ditto.
	
	* skk.el (skk-exit): Rename to `skk-mode-exit'.
	(skk-invoke): Rename to `skk-mode-invoke'.

	* skk-xemacs.el: Bug fixed.
	(skk-xemacs-prepare-modeline-properties): Simplify.

2000-12-12  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* skk-jisx0201.el (skk-toggle-katakana): Use new
	`skk-update-modeline'.
	(skk-jisx0201-mode-on): Ditto.

	* tut-code/skk-def.el (skk-kana-rom-vector): Removed.
	(skk-latin-mode-string): Removed.
	(skk-hiragana-mode-string): Ditto.
	(skk-katakana-mode-string): Ditto.
	(skk-jisx0208-latin-mode-string): Ditto.

	* tut-code/skk-tutcdef.el (skk-kana-rom-vector): Removed.
	(skk-latin-mode-string): Comment out.